kubernetes/pods/nginx-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multipod
  labels: 
    app: nginx
    env: prod
spec:
  containers:
    - name: container-write
      image: alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do date >> /var/tmp/index.html; sleep 10; done"]
      volumeMounts:
        - name: shared-volume
          mountPath: /var/tmp
    - name: nginx-container
      image: nginx:1.22.0
      ports:
        - name: http-port 
          containerPort: 80
          hostPort: 8080
          protocol: TCP
      resources:
          limits:
            cpu: "250m" # 1 core = 1000m = 100%
            memory: "500Mi" #Ki,Mi,Gi,Ti
          requests: #min
            cpu: "50m" 
            memory: "100Mi" #Ki,Mi,Gi,Ti
      volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html/
  volumes:
    - name: shared-volume
      emptyDir: {}
